--- a/client/index.html
+++ b/client/index.html
@@ -287,7 +287,7 @@ Button with icon</a></li>
                         <div class="file-input">
                             <form method="post" enctype="multipart/form-data" action="">
                               <span id="filename">Select your file</span>
-                                <label for="file-upload">Browse<input type="file" id="file-upload"></label>
+                                <label for="file-upload" class="btn btn-primary btn-outline">Browse<input type="file" id="file-upload"></label>
                             </form>
                         </div>
 					</div>
