adjusted css to not use id's, removed form declartion from inside input type file, #21

--- a/client/index.html
+++ b/client/index.html
@@ -285,10 +285,8 @@ Button with icon</a></li>
                     <div class="input-group">
                         <label>Label for Input</label>
                         <div class="file-input">
-                            <form method="post" enctype="multipart/form-data" action="">
-                              <span id="filename">Select your file</span>
-                                <label for="file-upload" class="btn btn-primary btn-outline">Browse<input type="file" id="file-upload"></label>
-                            </form>
+                            <span id="filename" class="filename">Select your file</span>
+                            <label for="file-upload" class="btn btn-primary btn-outline">Browse<input type="file" id="file-upload"></label>
                         </div>
 					</div>
 					<div class="input-group">
