removed id's from html and js, #21

--- a/client/index.html
+++ b/client/index.html
@@ -285,10 +285,11 @@ Button with icon</a></li>
                     <div class="input-group">
                         <label>Label for Input</label>
                         <div class="file-input">
-                            <span id="filename" class="filename">Select your file</span>
-                            <label for="file-upload" class="btn btn-primary btn-outline">Browse<input type="file" id="file-upload"></label>
+                            <span class="filename">Select your file</span>
+                            <label class="btn btn-primary file-upload-label">Browse<input type="file" class="file-upload"></label>
                         </div>
 					</div>
+
 					<div class="input-group">
 						<label>Label for Input</label>
 						<select>
