--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
 	<!-- build:css /assets/css/main.css -->
-	<link rel="stylesheet" type="text/css" href="/tmp/main.css" />
+	<link rel="stylesheet" type="text/css" href="/css/main.css" />
 	<!-- endbuild -->
 
 	<!-- ?rev=cachebust -->
